# MajoShovel

./: .gitattributes  .gitignore  .tmp_behaviors.csv  .tmp_enemies.csv  AGENTS.md  BUILD.md  CMakeLists.txt  CMakePresets.json  Objects_with_rotation.tsv  build_game.bat  dev_auto_reload.bat  run_game.bat  ★dev_auto_reload.bat  シナリオ設計書.md  タグ・コード運用ルール.txt  仕様書.md
assets/: README.md
assets/audio/: audio_manifest.tsv
data/: base_edit_home.cfg  base_edit_outdoor.cfg  ending_kamishibai.tsv  game_balance.cfg  google_sheet_source.cfg  object_image_scale.cfg  opening_kamishibai.tsv
data/story_events/: ending_main.story  merchant_post_ending.story  monica_base_post_ending.story  monica_base_progress_01.story  monica_base_progress_02.story  monica_base_progress_03.story  monica_base_progress_04.story  monica_radio_stage_01.story  monica_radio_stage_02.story  monica_radio_stage_03.story  monica_radio_stage_04.story  opening_base_intro.story  post_ending_intro.story  processing_post_ending.story  stage_01_boss_after.story  stage_01_boss_before.story  stage_01_clear.story  stage_01_start.story  stage_02_boss_after.story  stage_02_boss_before.story  stage_02_clear.story  stage_02_start.story  stage_03_boss_after.story  stage_03_boss_before.story  stage_03_clear.story  stage_03_start.story  stage_04_boss_after.story  stage_04_boss_before.story  stage_04_clear.story  stage_04_start.story  tutorial_capture_net.story  tutorial_chest.story  tutorial_dig.story  tutorial_light.story  tutorial_ring_equip.story  tutorial_ring_shift.story  tutorial_warp.story
docs/: merchant_wagon_spec.md
src/: main.cpp
src/data/: EnemyCatalog.cpp  EnemyCatalog.hpp  GameBalance.hpp  GoogleSheetSource.cpp  GoogleSheetSource.hpp  ObjectCatalog.cpp  ObjectCatalog.hpp  RuntimeBalance.cpp  RuntimeBalance.hpp  StageCatalog.cpp  StageCatalog.hpp  StageWeight.cpp  StageWeight.hpp
src/debug/: DebugConsole.cpp  DebugConsole.hpp  DebugPanel.cpp  DebugPanel.hpp
src/engine/: App.cpp  App.hpp  Audio.cpp  Audio.hpp  Camera.cpp  Camera.hpp  FileWatcher.cpp  FileWatcher.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  Math.hpp  ObjectPool.hpp  Renderer.cpp  Renderer.hpp  RendererTypes.hpp  Time.cpp  Time.hpp  Ui.cpp  Ui.hpp
src/game/: ActorVisual.hpp  Chunk.hpp  Collision.cpp  Collision.hpp  DebugOverlay.cpp  DebugOverlay.hpp  DepthRender.hpp  DialogueSystem.cpp  DialogueSystem.hpp  DiggingSystem.cpp  DiggingSystem.hpp  DungeonLayout.cpp  DungeonLayout.hpp  EffectDispatcher.cpp  EffectDispatcher.hpp  EffectSystem.cpp  EffectSystem.hpp  EncyclopediaSystem.cpp  EncyclopediaSystem.hpp  Enemy.cpp  Enemy.hpp  EnemyImageRenderer.cpp  EnemyImageRenderer.hpp  EnemySystem.cpp  EnemySystem.hpp  EntityStatus.cpp  EntityStatus.hpp  Game.cpp  Game.hpp  GameBase.cpp  GameCore.cpp  GameDevTools.cpp  GameDungeon.cpp  GameInternal.hpp  GameRender.cpp  GameSave.cpp  GroundLineSystem.cpp  GroundLineSystem.hpp  InventorySystem.cpp  InventorySystem.hpp  (+47 more)
tools/: build.ps1  dev_auto_reload.ps1  generate_placeholder_audio.ps1
画像/: スプライト-0001.aseprite
画像/敵/: おばけ.aseprite  こうもり.aseprite  カエル.aseprite  カニ.aseprite  キノコ.aseprite  クラゲ.aseprite  スライム.aseprite  ツチノコ.aseprite  トゲスライム.aseprite  ナメクジ.aseprite  ネズミ.aseprite  フクロウ.aseprite
